[package]
name = "ghostwraiter"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "2.4.0", features = ["json"] }
serenity = { version = "0.10.10", default-features = false, features = ["cache", "builder", "client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.16.1", features = ["macros"] }
